--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chance": "^1.0.4",
-    "docpress": "0.7.1",
+    "docpress": "^0.8.2",
     "git-update-ghpages": "1.3.0",
     "grunt": "^1.0.1",
     "grunt-contrib-jshint": "^1.0.0",
