--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memcache-pp",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Memcache for node",
   "main": "index.js",
   "scripts": {
@@ -45,7 +45,6 @@
     "debug": "^2.2.0",
     "hashring": "^3.2.0",
     "immutable": "^3.8.1",
-    "lodash": "^4.14.0",
-    "ramda": "^0.24.1"
+    "lodash": "^4.14.0"
   }
 }
