--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memcache-pp",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Memcache for node",
   "main": "index.js",
   "scripts": {
@@ -42,9 +42,8 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "carrier": "^0.3.0",
-    "debug": "^2.2.0",
+    "debug": "^2.6.9",
     "hashring": "^3.2.0",
-    "immutable": "^3.8.1",
-    "lodash": "^4.14.0"
+    "immutable": "^3.8.1"
   }
 }
