--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Install memcached
         run: apt install memcached
+      
       - name: Install modules
         run: npm install --save-dev
+      
       - name: Run tests
-      - run: npm test
+        run: npm test
